Add spinner indicator while download request to server is being done

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,8 @@
             <form style="height: 300px;">
                 <label class="form-label mb-3" for="links">Paste box.com links here (Separate by space or new line)</label>
                 <textarea class="mb-3 form-control resize-none h-50" name="links" id="links"></textarea>
-                <input class="btn btn-secondary" type="submit" value="Download">
+                <!-- <input class="btn btn-secondary" type="submit" value="Download"> -->
+                <button class="btn btn-secondary" type="submit" id="download-btn">Download</button>
             </form>
         </main>
     </body>
